@@ -1,13 +1,13 @@
-FROM bellsoft/liberica-openjre-alpine:21-cds as builder
-WORKDIR application
+FROM --platform=$BUILDPLATFORM bellsoft/liberica-openjre-alpine:25-cds AS builder
+WORKDIR /application
 ARG JAR_FILE=target/openwms-services-exec.jar
 COPY ${JAR_FILE} application.jar
-RUN java -Djarmode=layertools -jar application.jar extract
+RUN java -Djarmode=tools -jar application.jar extract --layers --launcher --destination extracted
 
-FROM bellsoft/liberica-openjre-alpine:21-cds
-WORKDIR application
-COPY --from=builder application/application/ ./
-COPY --from=builder application/dependencies/ ./
-COPY --from=builder application/spring-boot-loader/ ./
-COPY --from=builder application/snapshot-dependencies/ ./
-ENTRYPOINT exec java org.springframework.boot.loader.launch.JarLauncher
+FROM bellsoft/liberica-openjre-alpine:25-cds
+WORKDIR /application
+COPY --from=builder /application/extracted/dependencies/ ./
+COPY --from=builder /application/extracted/spring-boot-loader/ ./
+COPY --from=builder /application/extracted/snapshot-dependencies/ ./
+COPY --from=builder /application/extracted/application/ ./
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "org.springframework.boot.loader.launch.JarLauncher"]
